--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,159 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 :root {
-    
-    --primary-color: #144266;
-    --secondary-color: #78c4d7;
-    --accent1-color: #03763d;
-    --accent2-color: #ddfcad;
-    --heading-font: Palatino, Georgia, serif;
-    --paragraph-font: "Trebuchet MS", Arial, sans-serif;
-    --headline-color-on-white: #144266; 
-    --headline-color-on-color: white; 
-    --paragraph-color-on-white: #144266; 
-    --paragraph-color-on-color: white; 
-    --paragraph-background-color: #144266;
-    --nav-link-color: #144266;
-    --nav-background-color: #78c4d7;
-    --nav-hover-link-color: #144266;
-    --nav-hover-background-color: #ddfcad;
+    --primary-color: #25CED1;
+    --secondary-color: #FCEADE;
+    --accent1-color:#EA526F;
+    --accent2-color: #ff8a5b;
+
+    --heading-font: 'Rock Salt', serif;
+    --paragraph-font: 'Roboto', serif;
+
+    --nav-background-color: #25CED1;
+    --nav-link-color: #fff;
+    --nav-hover-link-color: #FCEADE;
+    --nav-hover-background-color:#ff8a5b;
+    ;
 }
+
 body {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 4em;
-    font-size: 18px;
-    text-align: center;
-}
-img {
-    display: block;
-    margin: 0 auto;
-    max-width: 300px;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: var(--heading-font);
-    color: var(--headline-color-on-white);
-}
-h2 {
-    text-align: center;
-}
-hr {
-    height: 3px;
-    margin: 35px 0;
-    background: var(--accent1-color);
-}
-header {
-    padding: 1em;
-    text-align: center;
-    color: var(--headline-color-on-color);
-    background-color: var(--paragraph-background-color);
-}
-header > h1,
-header > h2 {
-    color: var(--headline-color-on-color);
-}
-p {
     font-family: var(--paragraph-font);
-    color: var(--paragraph-color-on-white);
-    padding: 1em;
+    max-width: 960px;
+    padding: 20px;
 }
-.colors {
-    width: 100%;
-    min-width: 350px;
-    margin: 30px auto;
-    text-align: center;
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
 }
-.colors th {
-    background-color: #999;
-}
-.colors td {
-    width: 25%;
-    height: 3em;
-}
-.primary {
-    background-color: var(--primary-color);
-}
-.secondary {
-    background-color: var(--secondary-color);
-}
-.accent1 {
+
+header {
+    padding: 20px;
     background-color: var(--accent1-color);
 }
-.accent2 {
-    background-color: var(--accent2-color);
+
+p {
+    padding: 25px;
 }
-p.colored {
-    background-color: var(--paragraph-background-color);
-    color: var(--paragraph-color-on-color);
-}
+
 nav {
     background-color: var(--nav-background-color);
-    line-height: 3em;
-    text-align: center;
-    font-size: 1.2em;
-}
-nav {
-    list-style-type: none;
+    font-size: 1.2rem;
     display: flex;
 }
+
 nav a {
-    padding: 1em;
-    min-width: 120px;
+    display: block;
+    color: var(--nav-link-color);
     text-decoration: none;
-    padding: 10px;
+    padding: 1rem;
 }
-nav a:link,
-nav a:visited {
+
+nav a:link, nav a:visited {
     color: var(--nav-link-color);
 }
+
 nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
-}
-.sitemap {
-    display: grid;
-    justify-content: center;
-
-    grid-template-columns: repeat(6, 15%);
-    grid-template-rows: 3em 1.5em 1.5em 3em;
-    grid-template-areas:
-        ". . home home . ."
-        ". . . top . ."
-        ". left left right right ."
-        "page2 page2 . . page3 page3";
-}
-.sitemap > div {
-    text-align: center;
-}
-.sm-home {
-    grid-area: home;
-    background-color: #ccc;
-    line-height: 3em;
-}
-.sm-page2 {
-    grid-area: page2;
-    background-color: #ccc;
-    line-height: 3em;
-}
-.sm-page3 {
-    grid-area: page3;
-    background-color: #ccc;
-    line-height: 3em;
-}
-.top {
-    grid-area: top;
-    border-left: 1px solid;
-}
-.left {
-    grid-area: left;
-    border-top: 1px solid;
-    border-left: 1px solid;
-}
-.right {
-    grid-area: right;
-    border-top: 1px solid;
-    border-right: 1px solid;
 }
