--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,18 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 :root {
-    --primary-color: #25CED1;
-    --secondary-color: #FCEADE;
-    --accent1-color:#EA526F;
-    --accent2-color: #ff8a5b;
+    --primary-color: #144266;
+    --secondary-color: #78c4d7;
+    --accent1-color: #03763d;
+    --accent2-color: #ddfcad;
+    --heading-font: Palatino, Georgia, serif;
+    --paragraph-font: "Trebuchet MS", Arial, sans-serif;
+    --headline-color-on-white: #144266; 
+    --headline-color-on-color: white; 
+    --paragraph-color-on-white: #144266; 
+    --paragraph-color-on-color: white; 
+    --paragraph-background-color: #144266;
+    --nav-link-color: #144266;
+    --nav-background-color: #78c4d7;
+    --nav-hover-link-color: #144266;
+    --nav-hover-background-color: #ddfcad;
 
-    --heading-font: 'Rock Salt', serif;
-    --paragraph-font: 'Roboto', serif;
-
-    --nav-background-color: #25CED1;
-    --nav-link-color: #fff;
-    --nav-hover-link-color: #FCEADE;
-    --nav-hover-background-color:#ff8a5b;
     ;
 }
 
