--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -4,7 +4,7 @@
 :root {
     --primary-color: #144266;
     --secondary-color: #78c4d7;
-    --accent1-color: #03763d;
+    --accent1-color: #78c4d7;
     --accent2-color: #ddfcad;
     --heading-font: Palatino, Georgia, serif;
     --paragraph-font: "Trebuchet MS", Arial, sans-serif;
