--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,48 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    --primary-color: #25CED1;
-    --secondary-color: #FCEADE;
-    --accent1-color:#EA526F;
-    --accent2-color: #ff8a5b;
+--primary-color:#9c89b8;
+--secondary-color:#f0a6ca;
+--accent1-color:#efc3e6;
+--accent2-color:#b8bedd;
 
-    --heading-font: 'Rock Salt', serif;
-    --paragraph-font: 'Roboto', serif;
+--heading-font:"Roboto"
+--paragraph-font:Roboto, Helvetica ,sans-serif;
 
-    --nav-background-color: #25CED1;
-    --nav-link-color: #fff;
-    --nav-hover-link-color: #FCEADE;
-    --nav-hover-background-color:#ff8a5b;
-    ;
+--nav-background-color:#00ff00;
+--nav-link-color:#4c4c9d;
+--nav-hover-link-color:#712f79;
+--nav-hover-background-color:#f7996e;
 }
-
 body {
-    font-family: var(--paragraph-font);
-    max-width: 960px;
-    padding: 20px;
+max-width: 960px;
+margin: 0 auto;
+padding: 4em;
+font-size: 18px;
+text-align: center;
 }
-
 h1, h2, h3, h4, h5, h6 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);
+font-family: var(--heading-font);
+color: var(#040406);
 }
-
 header {
     padding: 20px;
-    background-color: var(--accent1-color);
+    background-color: var(--secondary-color);
 }
-
 p {
     padding: 25px;
 }
-
 nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
 }
-
 nav a {
     display: block;
     color: var(--nav-link-color);
@@ -50,11 +44,11 @@ nav a {
     padding: 1rem;
 }
 
-nav a:link, nav a:visited {
-    color: var(--nav-link-color);
+nav a:link|nav a:visited {
+    color : var(--nav-link-color)
 }
-
 nav a:hover {
-    color: var(--nav-hover-link-color);
+    
+    color :var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
 }
