--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,54 +1,164 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* if you are using any Google fonts change the font names below to your fonts. 
+Any spaces in your font name should be replaced with a +. 
+Fonts are separated by a & */
+@import url('https://fonts.google.com/specimen/Croissant+One|Oswald');
 
 :root {
---primary-color:#9c89b8;
---secondary-color:#f0a6ca;
---accent1-color:#efc3e6;
---accent2-color:#b8bedd;
+  /* change the values below to your colors from your palette */
+  --primary-color: #577399 ;
+  --secondary-color: #BDD5EA ;
+  --accent1-color: #FE5F55 ;
+  --accent2-color: #F7F7FF;
 
---heading-font:"Roboto"
---paragraph-font:Roboto, Helvetica ,sans-serif;
+  /* change the values below to your chosen font(s) */
+  --heading-font: "Croissant One";
+  --paragraph-font: Oswald, Helvetica, sans-serif;
 
---nav-background-color:#00ff00;
---nav-link-color:#4c4c9d;
---nav-hover-link-color:#712f79;
---nav-hover-background-color:#f7996e;
+  /* these colors below should be chosen from among your palette colors above */
+  --headline-color-on-white: #577399;  /* headlines on a white background */ 
+  --headline-color-on-color:#FE5F55 ; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #577399; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #BDD5EA  ;
+  --nav-link-color: #FE5F55;
+  --nav-background-color: #BDD5EA;
+  --nav-hover-link-color: #BDD5EA;
+  --nav-hover-background-color: #577399;
 }
+
+
+/*  Look around below...but DON'T CHANGE ANYTHING! */
+
 body {
-max-width: 960px;
-margin: 0 auto;
-padding: 4em;
-font-size: 18px;
-text-align: center;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
 }
 h1, h2, h3, h4, h5, h6 {
-font-family: var(--heading-font);
-color: var(#040406);
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-white);
+}
+h2 {
+  text-align: center;
+}
+hr {
+  height: 3px;
+  margin: 35px 0;
+  background: var(--accent1-color);
 }
 header {
-    padding: 20px;
-    background-color: var(--secondary-color);
+  padding: 1em;
+  text-align: center;
+  color: var(--headline-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+header > h1, header > h2 {
+  color: var(--headline-color-on-color);
 }
 p {
-    padding: 25px;
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color-on-white);
+  padding: 1em;
+}
+.colors {
+  width: 100%;
+  min-width: 350px;
+  margin: 30px auto;
+  text-align: center;
+}
+.colors th {
+  background-color: #999;
+}
+.colors td{
+  width: 25%;
+  height: 3em;
+}
+.primary {
+  background-color: var(--primary-color);
+}
+.secondary {
+  background-color: var(--secondary-color);
+}
+.accent1 {
+  background-color: var(--accent1-color);
+}
+.accent2{
+  background-color: var(--accent2-color);
+}
+p.colored {
+  background-color: var(--paragraph-background-color);
+  color: var(--paragraph-color-on-color);
 }
 nav {
-    background-color: var(--nav-background-color);
-    font-size: 1.2rem;
-    display: flex;
+  background-color: var(--nav-background-color);
+  line-height: 3em;
+  text-align: center;
+  font-size: 1.2em;
+}
+nav  {
+  list-style-type: none;
+  display: flex;
 }
 nav a {
-    display: block;
-    color: var(--nav-link-color);
-    text-decoration: none;
-    padding: 1rem;
+  padding:1em;
+  min-width: 120px;
+  text-decoration: none;
+  padding: 10px;
 }
-
-nav a:link|nav a:visited {
-    color : var(--nav-link-color)
+nav a:link, nav a:visited {
+  color: var(--nav-link-color);
 }
 nav a:hover {
-    
-    color :var(--nav-hover-link-color);
-    background-color: var(--nav-hover-background-color);
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
+}
+.sitemap {
+  display: grid;
+  justify-content: center;
+
+  grid-template-columns: repeat(6, 15%);
+  grid-template-rows: 3em 1.5em 1.5em 3em;
+  grid-template-areas: ". . home home . ."
+    ". . . top . ."
+    ". left left right right ."
+    "page2 page2 . . page3 page3";
+}
+.sitemap > div {
+  text-align: center;
+}
+.sm-home {
+  grid-area: home;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.sm-page2 {
+  grid-area: page2;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.sm-page3 {
+  grid-area: page3;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.top {
+  grid-area: top;
+  border-left: 1px solid;
+}
+.left {
+  grid-area: left;
+  border-top: 1px solid;
+  border-left: 1px solid;
+}
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
 }
