--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -4,7 +4,7 @@
 :root {
     --primary-color: #414770;
     --secondary-color: #5b85aa;
-    --accent1-color:#f46036;
+    --accent1-color: #372248;
     --accent2-color: #372248;
 
     --heading-font: 'Rock Salt', serif;
