--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 :root {
-    --primary-color: #414770;
+    --primary-color: #25CED1;
     --secondary-color: #5b85aa;
     --accent1-color: #372248;
     --accent2-color: #372248;
