--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 :root {
-    --primary-color: #25CED1;
-    --secondary-color: #5b85aa;
-    --accent1-color: #372248;
+    --primary-color: #5b85aa;
+    --secondary-color: #414770;
+    --accent1-color: #f46036;
     --accent2-color: #372248;
 
     --heading-font: 'Rock Salt', serif;
