--- a/wwr/styles/about.css
+++ b/wwr/styles/about.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+
 :root{    --primary-color: #4cc9f0;
     --secondary-color: #181717; 
     --accent1-color:  #fa9857;
