--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -42,3 +42,5 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+/*thought of trying to go super in detail with this but realized we arent revisiting this so i made it simple enought*/
