--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -1,23 +1,23 @@
 :root {
-    /* change the values below to your colors from your palette */
-    --primary-color: #144266;
-    --secondary-color: #78c4d7;
-    --accent1-color: #03763d;
-    --accent2-color: #ddfcad;
 
-    /* change the values below to your chosen font(s) */
+    --primary-color: #5b85aa;
+    --secondary-color: #414770;
+    --accent1-color: #372248;
+    --accent2-color: #f46036;
+
+    
     --heading-font: Palatino, Georgia, serif;
     --paragraph-font: "Trebuchet MS", Arial, sans-serif;
 
-    /* these colors below should be chosen from among your palette colors above */
-    --headline-color-on-white: #144266; /* headlines on a white background */
-    --headline-color-on-color: white; /* headlines on a colored background */
-    --paragraph-color-on-white: #144266; /* paragraph text on a white background */
-    --paragraph-color-on-color: white; /* paragraph text on a colored background */
-    --paragraph-background-color: #144266;
-    --nav-link-color: #144266;
+
+    --headline-color-on-white: #5b85aa; 
+    --headline-color-on-color: white; 
+    --paragraph-color-on-white: #5b85aa; 
+    --paragraph-color-on-color: white; 
+    --paragraph-background-color: #5b85aa;
+    --nav-link-color: #5b85aa;
     --nav-background-color: #78c4d7;
-    --nav-hover-link-color: #144266;
+    --nav-hover-link-color: #5b85aa;
     --nav-hover-background-color: #ddfcad;
 }
 
@@ -229,7 +229,7 @@ form {
   }
   
   label {
-    /* Uniform size & alignment */
+
     display: inline-block;
     width: 90px;
     text-align: right;
@@ -237,15 +237,13 @@ form {
   
   input,
   textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
+
     font: 1em sans-serif;
   
     /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
-  
-    /* Match form field borders */
+
     border: 1px solid #999;
   }
   
@@ -256,30 +254,24 @@ form {
   }
   
   textarea {
-    /* Align multiline text fields with their labels */
     vertical-align: top;
   
-    /* Provide space to type some text */
     height: 5em;
   }
   
   .button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
+  
+    padding-left: 90px; 
   }
   
   button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
+
     margin-left: 0.5em;
   }
   
   #feedback {
     background-color: #84E1BC;
-    /* position: absolute; */
-    /* top: 0; */
-    /* left: 0;
-    right: 0; */
+
     padding: .5em;
     /* make this element invisible until we are ready for it */
     display: none;    
